VKBootstrap/source/CVkBootstrap.h

enum class VkbInstanceError {
    NONE,
    VULKAN_UNAVAILABLE,
    VULKAN_VERSION_UNAVAILABLE,
    VULKAN_VERSION_1_1_UNAVAILABLE,
    VULKAN_VERSION_1_2_UNAVAILABLE,
    FAILED_CREATE_INSTANCE,
    FAILED_CREATE_DEBUG_MESSENGER,
    REQUESTED_LAYERS_NOT_PRESENT,
    REQUESTED_EXTENSIONS_NOT_PRESENT,
    WINDOWING_EXTENSIONS_NOT_PRESENT,
};
enum class VkbQueueError {
    NONE,
    PRESENT_UNAVAILABLE,
    GRAPHICS_UNAVAILABLE,
    COMPUTE_UNAVAILABLE,
    TRANSFER_UNAVAILABLE,
    QUEUE_INDEX_OUT_OF_RANGE,
    INVALID_QUEUE_FAMILY_INDEX
};
enum class VkbDeviceError {
    NONE,
    FAILED_CREATE_DEVICE,
    VKPHYSICALDEVICEFEATURES2_IN_PNEXT_CHAIN_WHILE_USING_ADD_REQUIRED_EXTENSION_FEATURES,
};
enum class VkbSwapchainError {
    NONE,
    SURFACE_HANDLE_NOT_PROVIDED,
    FAILED_QUERY_SURFACE_SUPPORT_DETAILS,
    FAILED_CREATE_SWAPCHAIN,
    FAILED_GET_SWAPCHAIN_IMAGES,
    FAILED_CREATE_SWAPCHAIN_IMAGE_VIEWS,
    REQUIRED_MIN_IMAGE_COUNT_TOO_LOW,
    REQUIRED_USAGE_NOT_SUPPORTED
};
    EXPORT VkAllocationCallbacks* get_allocation_callbacks(VkbInstance instance);
    
    // Create a VkInstance. Return a VkbInstanceError if it failed.
    EXPORT VkbInstanceError build(VkbInstanceBuilder builder, VkbInstance* result);
    // Provide custom allocation callbacks.
    EXPORT void set_allocation_callbacks(VkbInstanceBuilder builder, VkAllocationCallbacks* callbacks);
 // namespace VkbPhysicalDeviceSelectorFunctions

enum class VkbQueueType {
    PRESENT,
    GRAPHICS,
    COMPUTE,
    TRANSFER,
};
    EXPORT VkAllocationCallbacks* get_allocation_callbacks(VkbDevice device);
    // Only a compute or transfer queue type is valid. All other queue types do not support a 'dedicated' queue index
    EXPORT VkbQueueError get_dedicated_queue_index(VkbDevice device, VkbQueueType type, uint32_t* result);
    
    EXPORT VkbQueueError get_queue(VkbDevice device, VkbQueueType type, VkQueue* result);
    // Only a compute or transfer queue type is valid. All other queue types do not support a 'dedicated' queue
    EXPORT VkbQueueError get_dedicated_queue(VkbDevice device, VkbQueueType type, VkQueue* result);
    EXPORT VkbDeviceBuilder make_device_builder(VkbPhysicalDevice physical_device);
    EXPORT void delete_device_builder(VkbDeviceBuilder* builder);
    
    EXPORT VkbDeviceError build(VkbDeviceBuilder builder, VkbDevice* result);
    
    EXPORT void add_pNext(VkbDeviceBuilder builder, VkBaseOutStructure* structure);
    

    EXPORT void set_allocation_callbacks(VkbDeviceBuilder builder, VkAllocationCallbacks* callbacks);
    EXPORT uint32_t get_image_count(VkbSwapchain swapchain);
    EXPORT VkFormat get_image_format(VkbSwapchain swapchain);
    EXPORT VkColorSpaceKHR get_color_space(VkbSwapchain swapchain);
    EXPORT VkExtent2D get_extent(VkbSwapchain swapchain);
    EXPORT VkImageUsageFlags get_image_usage_flags(VkbSwapchain swapchain);
    EXPORT VkPresentModeKHR get_present_mode(VkbSwapchain swapchain);
    EXPORT VkAllocationCallbacks* get_allocation_callbacks(VkbSwapchain swapchain);
    
    EXPORT void destroy_swapchain(VkbSwapchain* swapchain);
    
    // Returns a vector of VkImage handles to the swapchain.
    // 
    // Alllocates memory that needs to be freed with "destroy_images"
    EXPORT VkbSwapchainError get_images(VkbSwapchain swapchain, VkImage** data, size_t* length);
    EXPORT void destroy_images(VkImage* data);
    
    // Returns a vector of VkImageView's to the VkImage's of the swapchain.
    // VkImageViews must be destroyed.  The pNext chain must be a nullptr or a valid
    // structure.
    //
    // Compared to the original function, this will allocate memory for the data variable,
    // This means that the user won't have to worry about the lifetime of the data as it's
    // not bound to a vector. All that'll need to be done in the end is calling the destroy
    // method.
    EXPORT VkbSwapchainError get_image_views(VkbSwapchain swapchain, VkImageView** data, size_t* length);
    EXPORT VkbSwapchainError get_image_views(VkbSwapchain swapchain, const void* pNext, VkImageView** data, size_t* length);
    EXPORT void destroy_image_views(VkbSwapchain swapchain, VkImageView* data, size_t length);
    EXPORT VkbSwapchainBuilder make_swapchain_builder(VkbDevice device);
    EXPORT VkbSwapchainBuilder make_swapchain_builder(VkbDevice device, VkSurfaceKHR surface);
    EXPORT void delete_swapchain_builder(VkbSwapchainBuilder* builder);
    
    EXPORT VkbSwapchainError build(VkbSwapchainBuilder builder, VkbSwapchain* result);
    // Set the oldSwapchain member of VkSwapchainCreateInfoKHR.
    // For use in rebuilding a swapchain.
    EXPORT void set_old_swapchain(VkbSwapchainBuilder builder, VkSwapchainKHR old_swapchain);
    EXPORT void set_old_swapchain(VkbSwapchainBuilder builder, VkbSwapchain old_swapchain);
    
    // Desired size of the swapchain. By default, the swapchain will use the size
    // of the window being drawn to.
    EXPORT void set_desired_extent(VkbSwapchainBuilder builder, uint32_t width, uint32_t height);
    // When determining the surface format, make this the first to be used if supported.
    EXPORT void set_desired_format(VkbSwapchainBuilder builder, VkSurfaceFormatKHR format);
    // Add this swapchain format to the end of the list of formats selected from.
    EXPORT void add_fallback_format(VkbSwapchainBuilder builder, VkSurfaceFormatKHR format);
    // Use the default swapchain formats. This is done if no formats are provided.
    // Default surface format is {VK_FORMAT_B8G8R8A8_SRGB, VK_COLOR_SPACE_SRGB_NONLINEAR_KHR}
    EXPORT void use_default_format_selection(VkbSwapchainBuilder builder);
    // When determining the present mode, make this the first to be used if supported.
    EXPORT void set_desired_present_mode(VkbSwapchainBuilder builder, VkPresentModeKHR present_mode);
    // Add this present mode to the end of the list of present modes selected from.
    EXPORT void add_fallback_present_mode(VkbSwapchainBuilder builder, VkPresentModeKHR present_mode);
    // Use the default presentation mode. This is done if no present modes are provided.
    // Default present modes: VK_PRESENT_MODE_MAILBOX_KHR with fallback VK_PRESENT_MODE_FIFO_KHR
    EXPORT void use_default_present_mode_selection(VkbSwapchainBuilder builder);
    // Set the bitmask of the image usage for acquired swapchain images.
    // If the surface capabilities cannot allow it, building the swapchain will result in the `SwapchainError::required_usage_not_supported` error.
    EXPORT void set_image_usage_flags(VkbSwapchainBuilder builder, VkImageUsageFlags usage_flags);
    // Add a image usage to the bitmask for acquired swapchain images.
    EXPORT void add_image_usage_flags(VkbSwapchainBuilder builder, VkImageUsageFlags usage_flags);
    // Add a structure to the pNext chain of VkSwapchainCreateInfoKHR.
    // The structure must be valid when SwapchainBuilder::build() is called.
    //
    // Original Code:
    //     template <typename T> SwapchainBuilder& add_pNext(T* structure) {
    //         info.pNext_chain.push_back(reinterpret_cast<VkBaseOutStructure*>(structure));
    //         return *this;
    //     }
    EXPORT void add_pNext(VkbSwapchainBuilder builder, VkBaseOutStructure* structure);
    // Provide custom allocation callbacks.
    EXPORT void set_allocation_callbacks(VkbSwapchainBuilder builder, VkAllocationCallbacks* callbacks);