VKBootstrap/modified_generated_windows.jai


    // Only a compute or transfer queue type is valid. All other queue types do not support a 'dedicated' queue index
    get_dedicated_queue_index :: (device: Device, type: QueueType, result: *u32) -> QueueError #foreign libvkbootstrap "?get_dedicated_queue_index@VkbDeviceFunctions@@YA?AW4VkbQueueError@@PEAUVkbDevice_T@@W4VkbQueueType@@PEAI@Z";
    get_dedicated_queue_index :: inline (device: Device, type: QueueType) -> u32, QueueError #no_context {
        result: u32 = ---;
        error := get_dedicated_queue_index(device, type, *result);
        return result, error;
    }

    get_queue :: (device: Device, type: QueueType, result: *VkQueue) -> QueueError #foreign libvkbootstrap "?get_queue@VkbDeviceFunctions@@YA?AW4VkbQueueError@@PEAUVkbDevice_T@@W4VkbQueueType@@PEAPEAUVkQueue_T@@@Z";
    get_queue :: inline (device: Device, type: QueueType) -> VkQueue, QueueError #no_context {
        result: VkQueue = ---;
        error := get_queue(device, type, *result);
        return result, error;
    }

    // Only a compute or transfer queue type is valid. All other queue types do not support a 'dedicated' queue
    get_dedicated_queue :: (device: Device, type: QueueType, result: *VkQueue) -> QueueError #foreign libvkbootstrap "?get_dedicated_queue@VkbDeviceFunctions@@YA?AW4VkbQueueError@@PEAUVkbDevice_T@@W4VkbQueueType@@PEAPEAUVkQueue_T@@@Z";
    get_dedicated_queue :: inline (device: Device, type: QueueType) -> VkQueue, QueueError #no_context {
        result: VkQueue = ---;
        error := get_dedicated_queue(device, type, *result);
        return result, error;
    }

DeviceBuilder_T :: struct {}
DeviceBuilder :: *DeviceBuilder_T;

// DeviceBuilderFunctions
    make_device_builder :: (physical_device: PhysicalDevice) -> DeviceBuilder #foreign libvkbootstrap "?make_device_builder@VkbDeviceBuilderFunctions@@YAPEAUVkbDeviceBuilder_T@@PEAUVkbPhysicalDevice_T@@@Z";
    delete_device_builder :: (builder: *DeviceBuilder) -> void #foreign libvkbootstrap "?delete_device_builder@VkbDeviceBuilderFunctions@@YAXPEAPEAUVkbDeviceBuilder_T@@@Z";

    build :: (builder: DeviceBuilder, result: *Device) -> DeviceError #foreign libvkbootstrap "?build@VkbDeviceBuilderFunctions@@YA?AW4VkbDeviceError@@PEAUVkbDeviceBuilder_T@@PEAPEAUVkbDevice_T@@@Z";
    build :: inline (builder: DeviceBuilder) -> Device, DeviceError #no_context {
        result: Device = ---;
        error := build(builder, *result);
        return result, error;
    }

    add_pNext :: (builder: DeviceBuilder, structure: *VkBaseOutStructure) -> void #foreign libvkbootstrap "?add_pNext@VkbDeviceBuilderFunctions@@YAXPEAUVkbDeviceBuilder_T@@PEAUVkBaseOutStructure@@@Z";

    set_allocation_callbacks :: (builder: DeviceBuilder, callbacks: *VkAllocationCallbacks) -> void #foreign libvkbootstrap "?set_allocation_callbacks@VkbDeviceBuilderFunctions@@YAXPEAUVkbDeviceBuilder_T@@PEAUVkAllocationCallbacks@@@Z";

Swapchain_T :: struct {}
Swapchain :: *Swapchain_T;

// VkbSwapchainFunctions
    get_image_count :: (swapchain: Swapchain) -> u32 #foreign libvkbootstrap "?get_image_count@VkbSwapchainFunctions@@YAIPEAUVkbSwapchain_T@@@Z";
    get_image_format :: (swapchain: Swapchain) -> VkFormat #foreign libvkbootstrap "?get_image_format@VkbSwapchainFunctions@@YA?AW4VkFormat@@PEAUVkbSwapchain_T@@@Z";
    get_color_space :: (swapchain: Swapchain) -> VkColorSpaceKHR #foreign libvkbootstrap "?get_color_space@VkbSwapchainFunctions@@YA?AW4VkColorSpaceKHR@@PEAUVkbSwapchain_T@@@Z";
    get_extent :: (swapchain: Swapchain) -> VkExtent2D #foreign libvkbootstrap "?get_extent@VkbSwapchainFunctions@@YA?AUVkExtent2D@@PEAUVkbSwapchain_T@@@Z";
    get_image_usage_flags :: (swapchain: Swapchain) -> VkImageUsageFlags #foreign libvkbootstrap "?get_image_usage_flags@VkbSwapchainFunctions@@YAIPEAUVkbSwapchain_T@@@Z";
    get_present_mode :: (swapchain: Swapchain) -> VkPresentModeKHR #foreign libvkbootstrap "?get_present_mode@VkbSwapchainFunctions@@YA?AW4VkPresentModeKHR@@PEAUVkbSwapchain_T@@@Z";
    get_allocation_callbacks :: (swapchain: Swapchain) -> *VkAllocationCallbacks #foreign libvkbootstrap "?get_allocation_callbacks@VkbSwapchainFunctions@@YAPEAUVkAllocationCallbacks@@PEAUVkbSwapchain_T@@@Z";

    destroy_swapchain :: (swapchain: *Swapchain) -> void #foreign libvkbootstrap "?destroy_swapchain@VkbSwapchainFunctions@@YAXPEAPEAUVkbSwapchain_T@@@Z";

    // Returns a vector of VkImage handles to the swapchain.
    //
    // Alllocates memory that needs to be freed with "destroy_images"
    get_images :: (swapchain: Swapchain, data: **VkImage, length: *u64) -> SwapchainError #foreign libvkbootstrap "?get_images@VkbSwapchainFunctions@@YA?AW4VkbSwapchainError@@PEAUVkbSwapchain_T@@PEAPEAPEAUVkImage_T@@PEA_K@Z";
    
    get_images :: inline (swapchain: Swapchain) -> []VkImage, SwapchainError #no_context {
        result: []VkImage = ---;
        length: u64 = ---;
        error := get_images(swapchain, *result.data, *length);
        result.count = xx length;
        return result, error;
    }
    
    destroy_images :: (data: *VkImage) -> void #foreign libvkbootstrap "?destroy_images@VkbSwapchainFunctions@@YAXPEAPEAUVkImage_T@@@Z";
    destroy_images :: inline (data: []VkImage) #no_context {
        destroy_images(data.data);
    }

    // Returns a vector of VkImageView's to the VkImage's of the swapchain.
    // VkImageViews must be destroyed.  The pNext chain must be a nullptr or a valid
    // structure.
    //
    // Compared to the original function, this will allocate memory for the data variable,
    // This means that the user won't have to worry about the lifetime of the data as it's
    // not bound to a vector. All that'll need to be done in the end is calling the destroy
    // method.
    get_image_views :: (swapchain: Swapchain, data: **VkImageView, length: *u64) -> SwapchainError #foreign libvkbootstrap "?get_image_views@VkbSwapchainFunctions@@YA?AW4VkbSwapchainError@@PEAUVkbSwapchain_T@@PEAPEAPEAUVkImageView_T@@PEA_K@Z";
    get_image_views :: inline (swapchain: Swapchain) -> []VkImageView, SwapchainError #no_context {
        result, error := get_image_views(swapchain, null);
        return result, error;
    }
    
    get_image_views :: (swapchain: Swapchain, pNext: *void, data: **VkImageView, length: *u64) -> SwapchainError #foreign libvkbootstrap "?get_image_views@VkbSwapchainFunctions@@YA?AW4VkbSwapchainError@@PEAUVkbSwapchain_T@@PEBXPEAPEAPEAUVkImageView_T@@PEA_K@Z";
    get_image_views :: inline (swapchain: Swapchain, pNext: *void) -> []VkImageView, SwapchainError #no_context {
        result: []VkImageView = ---;
        length: u64 = ---;
        error := get_image_views(swapchain, pNext, *result.data, *length);
        result.count = xx length;
        return result, error;
    }
    
    destroy_image_views :: (swapchain: Swapchain, data: *VkImageView, length: u64) -> void #foreign libvkbootstrap "?destroy_image_views@VkbSwapchainFunctions@@YAXPEAUVkbSwapchain_T@@PEAPEAUVkImageView_T@@_K@Z";
    destroy_image_views :: inline (swapchain: Swapchain, image_views: []VkImageView) #no_context {
        destroy_image_views(swapchain, image_views.data, xx image_views.count);
    }

SwapchainBuilder_T :: struct {}
SwapchainBuilder :: *SwapchainBuilder_T;

// VkbSwapchainBuilderFunctions
    make_swapchain_builder :: (device: Device) -> SwapchainBuilder #foreign libvkbootstrap "?make_swapchain_builder@VkbSwapchainBuilderFunctions@@YAPEAUVkbSwapchainBuilder_T@@PEAUVkbDevice_T@@@Z";
    make_swapchain_builder :: (device: Device, surface: VkSurfaceKHR) -> SwapchainBuilder #foreign libvkbootstrap "?make_swapchain_builder@VkbSwapchainBuilderFunctions@@YAPEAUVkbSwapchainBuilder_T@@PEAUVkbDevice_T@@PEAUVkSurfaceKHR_T@@@Z";
    delete_swapchain_builder :: (builder: *SwapchainBuilder) -> void #foreign libvkbootstrap "?delete_swapchain_builder@VkbSwapchainBuilderFunctions@@YAXPEAPEAUVkbSwapchainBuilder_T@@@Z";

    build :: (builder: SwapchainBuilder, result: *Swapchain) -> SwapchainError #foreign libvkbootstrap "?build@VkbSwapchainBuilderFunctions@@YA?AW4VkbSwapchainError@@PEAUVkbSwapchainBuilder_T@@PEAPEAUVkbSwapchain_T@@@Z";
    build :: inline (builder: SwapchainBuilder) -> Swapchain, SwapchainError #no_context {
        result: VkbSwapchain = ---;
        error := build(builder, *result);
        return result, error;
    }

    // Set the oldSwapchain member of VkSwapchainCreateInfoKHR.
    // For use in rebuilding a swapchain.
    set_old_swapchain :: (builder: SwapchainBuilder, old_swapchain: VkSwapchainKHR) -> void #foreign libvkbootstrap "?set_old_swapchain@VkbSwapchainBuilderFunctions@@YAXPEAUVkbSwapchainBuilder_T@@PEAUVkSwapchainKHR_T@@@Z";
    set_old_swapchain :: (builder: SwapchainBuilder, old_swapchain: Swapchain) -> void #foreign libvkbootstrap "?set_old_swapchain@VkbSwapchainBuilderFunctions@@YAXPEAUVkbSwapchainBuilder_T@@PEAUVkbSwapchain_T@@@Z";

    // Desired size of the swapchain. By default, the swapchain will use the size
    // of the window being drawn to.
    set_desired_extent :: (builder: SwapchainBuilder, width: u32, height: u32) -> void #foreign libvkbootstrap "?set_desired_extent@VkbSwapchainBuilderFunctions@@YAXPEAUVkbSwapchainBuilder_T@@II@Z";

    // When determining the surface format, make this the first to be used if supported.
    set_desired_format :: (builder: SwapchainBuilder, format: VkSurfaceFormatKHR) -> void #foreign libvkbootstrap "?set_desired_format@VkbSwapchainBuilderFunctions@@YAXPEAUVkbSwapchainBuilder_T@@UVkSurfaceFormatKHR@@@Z";

    // Add this swapchain format to the end of the list of formats selected from.
    add_fallback_format :: (builder: SwapchainBuilder, format: VkSurfaceFormatKHR) -> void #foreign libvkbootstrap "?add_fallback_format@VkbSwapchainBuilderFunctions@@YAXPEAUVkbSwapchainBuilder_T@@UVkSurfaceFormatKHR@@@Z";

    // Use the default swapchain formats. This is done if no formats are provided.
    // Default surface format is {VK_FORMAT_B8G8R8A8_SRGB, VK_COLOR_SPACE_SRGB_NONLINEAR_KHR}
    use_default_format_selection :: (builder: SwapchainBuilder) -> void #foreign libvkbootstrap "?use_default_format_selection@VkbSwapchainBuilderFunctions@@YAXPEAUVkbSwapchainBuilder_T@@@Z";

    // When determining the present mode, make this the first to be used if supported.
    set_desired_present_mode :: (builder: SwapchainBuilder, present_mode: VkPresentModeKHR) -> void #foreign libvkbootstrap "?set_desired_present_mode@VkbSwapchainBuilderFunctions@@YAXPEAUVkbSwapchainBuilder_T@@W4VkPresentModeKHR@@@Z";

    // Add this present mode to the end of the list of present modes selected from.
    add_fallback_present_mode :: (builder: SwapchainBuilder, present_mode: VkPresentModeKHR) -> void #foreign libvkbootstrap "?add_fallback_present_mode@VkbSwapchainBuilderFunctions@@YAXPEAUVkbSwapchainBuilder_T@@W4VkPresentModeKHR@@@Z";

    // Use the default presentation mode. This is done if no present modes are provided.
    // Default present modes: VK_PRESENT_MODE_MAILBOX_KHR with fallback VK_PRESENT_MODE_FIFO_KHR
    use_default_present_mode_selection :: (builder: SwapchainBuilder) -> void #foreign libvkbootstrap "?use_default_present_mode_selection@VkbSwapchainBuilderFunctions@@YAXPEAUVkbSwapchainBuilder_T@@@Z";

    // Set the bitmask of the image usage for acquired swapchain images.
    // If the surface capabilities cannot allow it, building the swapchain will result in the `SwapchainError::required_usage_not_supported` error.
    set_image_usage_flags :: (builder: SwapchainBuilder, usage_flags: VkImageUsageFlags) -> void #foreign libvkbootstrap "?set_image_usage_flags@VkbSwapchainBuilderFunctions@@YAXPEAUVkbSwapchainBuilder_T@@I@Z";

    // Add a image usage to the bitmask for acquired swapchain images.
    add_image_usage_flags :: (builder: SwapchainBuilder, usage_flags: VkImageUsageFlags) -> void #foreign libvkbootstrap "?add_image_usage_flags@VkbSwapchainBuilderFunctions@@YAXPEAUVkbSwapchainBuilder_T@@I@Z";
